clusters/mgmt/tkg-extensions-mods/authentication/dex/aws/oidc/generated/02-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dexsvc
  namespace: tanzu-system-auth
  labels:
    app: dex
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
spec:
  type: ClusterIP
  ports:
  - name: "dex"
    protocol: TCP
    port: 443
    targetPort: "https"
  selector:
    app: dex
