clusters/mgmt/tkg-extensions-mods/authentication/dex/aws/oidc/generated/02b-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dex
  namespace: tanzu-system-auth
spec:
  virtualhost:
    fqdn: dex.mgmt.tkg-aws-lab.winterfell.live
    tls:
      passthrough: true
  tcpproxy:
    services:
    - name: dexsvc
      port: 443
  routes:
  - match: /
    services:
    - name: kuard
      port: 80
